--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>한국 문학 문제풀이</title>
+    <title>정동민 국어논술 평촌고2 수행 주관식</title>
     <style>
         * {
             margin: 0;
