--- a/index.html
+++ b/index.html
@@ -306,11 +306,10 @@
             </div>
             
             <div class="button-group">
-                <button class="check-btn" id="check-btn" onclick="checkAnswer()" disabled>정답 확인</button>
-                <button class="nav-btn" id="prev-btn" onclick="previousQuestion()" disabled>이전 문제</button>
-                <button class="nav-btn" id="next-btn" onclick="nextQuestion()">다음 문제</button>
-                <button class="reset-btn" onclick="resetQuiz()">처음부터</button>
-            </div>
+    <button class="nav-btn" id="prev-btn" onclick="previousQuestion()" disabled>이전 문제</button>
+    <button class="nav-btn" id="next-btn" onclick="nextQuestion()" style="display: none;">다음 문제</button>
+    <button class="reset-btn" onclick="resetQuiz()">처음부터</button>
+</div>
 
             <div class="feedback" id="feedback"></div>
         </div>
