--- a/index.html
+++ b/index.html
@@ -397,20 +397,14 @@
                 <!-- 선택지가 여기에 동적으로 생성됩니다 -->
             </div>
             
-         .button-group {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-
-.reset-btn {
-    background: #dc3545;
-    color: white;
-    margin-left: auto;
-}
+         <div class="button-group">
+    <div style="display: flex; gap: 10px; flex: 1;">
+        <button class="nav-btn" id="prev-btn" onclick="previousQuestion()" disabled>이전 문제</button>
+        <button class="nav-btn" id="next-btn" onclick="nextQuestion()" style="display: none;">다음 문제</button>
+        <button class="nav-btn" id="continue-btn" onclick="continueToNext()" style="display: none;">다음 문제로</button>
+    </div>
+    <button class="reset-btn" onclick="resetQuiz()">처음부터</button>
+</div>
 
            <div class="feedback" id="feedback"></div>
             
